--- a/src/AppBundle/Resources/views/dashboard.html.twig
+++ b/src/AppBundle/Resources/views/dashboard.html.twig
@@ -2,5 +2,28 @@
 {% block subheader_actions %}{% endblock %}
 
 {% block body %}
-
+<div class="fu apt">
+  <div class="gq gg ala">
+    <div class="apu ano">
+      <div class="alz">
+        <span class="anj">Companies</span>
+        <h2 class="ani">
+          {{ companies|length }}
+        </h2>
+        <hr class="ans akt">
+      </div>
+    </div>
+  </div>
+  <div class="gq gg ala">
+    <div class="apu anr">
+      <div class="alz">
+        <span class="anj">Contacts</span>
+        <h2 class="ani">
+          {{ persons|length }}
+        </h2>
+        <hr class="ans akt">
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
