--- a/src/AppBundle/Resources/views/public_layout.html.twig
+++ b/src/AppBundle/Resources/views/public_layout.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Login{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {% block stylesheets %}
         <link rel="stylesheet" type="text/css" href="/assets/css/bundled.min.css">
