--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -4,14 +4,17 @@
 {% block body %}
 
 <div class="row">
-<div class="col-xs-6 col-xs-offset-3">
+<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-6">
 
-  <form method="post" action="{{ path("fos_user_security_check") }}" class="form-signin">
+  <form method="post" action="{{ path("fos_user_security_check") }}" class="form form-signin">
     {% if error %}
       <div class="alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+    
     <h2 class="form-signin-heading">Please sign in</h2>
+    
+    <div class="form-group">
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email"
             name="_username"
@@ -21,6 +24,8 @@
             placeholder="Email address"
             required=""
             autofocus="">
+    </div>
+    <div class="form-group">
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password"
           id="inputPassword"
@@ -28,6 +33,7 @@
           placeholder="Password"
           name="_password"
           required="">
+    </div>
     <div class="checkbox">
       <label>
         <input type="checkbox" id="remember_me" name="_remember_me" value="on"> Remember me
