--- a/src/AppBundle/Resources/views/dashboard.html.twig
+++ b/src/AppBundle/Resources/views/dashboard.html.twig
@@ -8,18 +8,19 @@
       <div class="alz">
         <span class="anj">Companies</span>
         <h2 class="ani">
-          {{ companies|length }}
+          {{ companiesNm }}
         </h2>
         <hr class="ans akt">
       </div>
     </div>
   </div>
+
   <div class="gq gg ala">
     <div class="apu anr">
       <div class="alz">
         <span class="anj">Contacts</span>
         <h2 class="ani">
-          {{ persons|length }}
+          {{ personsNm }}
         </h2>
         <hr class="ans akt">
       </div>
@@ -27,33 +28,5 @@
   </div>
 
 
-<div class="gq gg ala">
-    <div class="apu anp">
-      <div class="alz">
-        <span class="anj">Sign-ups</span>
-        <h2 class="ani">
-          1,293
-          <small class="ank anl">6.75%</small>
-        </h2>
-        <hr class="ans akt">
-      </div>
-      <canvas id="sparkline1" width="334" height="83" class="apv" data-chart="spark-line" data-value="[{data:[12,38,32,60,36,54,68]}]" data-labels="['a', 'b','c','d','e','f','g']" style="width: 334px; height: 83px;"></canvas>
-    </div>
-  </div>
-
-<div class="gq gg ala">
-    <div class="apu anq">
-      <div class="alz">
-        <span class="anj">Downloads</span>
-        <h2 class="ani">
-          758
-          <small class="ank anm">1.3%</small>
-        </h2>
-        <hr class="ans akt">
-      </div>
-      <canvas id="sparkline1" width="334" height="83" class="apv" data-chart="spark-line" data-value="[{data:[43,48,52,58,50,95,100]}]" data-labels="['a', 'b','c','d','e','f','g']" style="width: 334px; height: 83px;"></canvas>
-    </div>
-  </div>
-  
 </div>
 {% endblock %}
