--- a/src/AppBundle/Resources/views/public_layout.html.twig
+++ b/src/AppBundle/Resources/views/public_layout.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Login{% endblock %}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
         {% block stylesheets %}
         <link rel="stylesheet" type="text/css" href="/assets/css/bundled.min.css">
         {% endblock %}
