--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -19,8 +19,7 @@
                         <button class="amy amz aoo" type="button" data-toggle="collapse" data-target="#nav-toggleable-sm">
                             <span class="ct">Toggle nav</span>
                         </button>
-                        <a class="aop cn" href="../index.html">
-                            <h6 class="apd">Fondacija</h6>
+                        <a class="aop cn" href="{{ path("dashboard") }}">
                             <h2 class="apc">Dodir Nade</h2>
                         </a>
                     </div>
