--- a/src/AppBundle/Resources/views/Contact/show.html.twig
+++ b/src/AppBundle/Resources/views/Contact/show.html.twig
@@ -53,9 +53,11 @@ $(document).ready(function(){
 		m = $('textarea').mentionsInput({source: Routing.generate('get_usernames')});
 		autosize($('textarea'));
 
-		if (hash!='')
+		if (hash!='' && !isNaN(hash))
 		{
-			location.href = '#fos_comment_comment_body_' + hash;
+			$('html, body').animate({
+	            scrollTop: $('#fos_comment_comment_body_' + hash).offset().top
+	        }, 0);
 		}
 	});
 	$(document).on('fos_comment_submitted_form', function (event, data) {
