--- a/src/AppBundle/Resources/views/Contact/list.html.twig
+++ b/src/AppBundle/Resources/views/Contact/list.html.twig
@@ -6,10 +6,10 @@
 {% block subheader_actions %}
 <div class="nz pull-right">
 	<a href="{{ path("contact_new") }}" class="ce apn">
-		<i class="fa fa-plus"></i> Create
+		<i class="fa fa-plus"></i>
 	</a>
 	<button type="button" class="ce apn" data-placement="left" id="delete-contacts">
-		<span class="bv zz"></span> Delete
+		<span class="bv zz"></span>
 	</button>
 </div>
 {% endblock %}
