--- a/src/AppBundle/Resources/views/Contact/list.html.twig
+++ b/src/AppBundle/Resources/views/Contact/list.html.twig
@@ -9,7 +9,7 @@
 		<i class="fa fa-plus"></i>
 	</a>
 	<button type="button" class="ce apn" data-placement="left" id="delete-contacts">
-		<span class="bv zz"></span>
+		<span class="fa fa-trash"></span>
 	</button>
 </div>
 {% endblock %}
