--- a/src/AppBundle/Resources/views/Document/list.html.twig
+++ b/src/AppBundle/Resources/views/Document/list.html.twig
@@ -6,10 +6,10 @@
 {% block subheader_actions %}
 <div class="nz pull-right">
 	<a href="{{ path("document_create") }}" class="ce apn">
-		<i class="fa fa-plus"></i> Create
+		<i class="fa fa-plus"></i>
 	</a>
 	<button type="button" class="ce apn" data-placement="left" id="delete-documents">
-		<span class="bv zz"></span> Delete
+		<span class="fa fa-trash"></span>
 	</button>
 </div>
 {% endblock %}
