--- a/src/AppBundle/Resources/views/Document/create.html.twig
+++ b/src/AppBundle/Resources/views/Document/create.html.twig
@@ -32,7 +32,7 @@
           <input type="file" name="file">
       </span>
   </div>
-  <button type="submit" id="submit_doc" class="btn btn-primary pull-right">Create Document</button>
+  <button type="submit" id="submit_doc" class="btn btn-primary">Create Document</button>
 </form>
 
 
