--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -67,11 +67,11 @@
             <div class="hc aps">
             {% block subheader %}
                 <div class="apa">
-                    <div class="apb">
+                    <div class="col-xs-7 col-sm-8 col-lg-9">
                         <h6 class="apd">{% block subheader_small_title %}Dashboard{% endblock %}</h6>
                         <h2 class="apc">{% block subheader_big_title %}Overview{% endblock %}</h2>
                     </div>
-                    <div class="ob ape">
+                    <div class="col-xs-5 col-sm-4 col-lg-3" style="margin-top:12px; text-align: right">
                         <div class="tn aol">
                             {% block subheader_actions %}
                                 <a class="ce apn ame pull-right" href="#">
