disable submit untill comment is posted

--- a/src/AppBundle/Resources/views/Contact/show.html.twig
+++ b/src/AppBundle/Resources/views/Contact/show.html.twig
@@ -19,7 +19,7 @@
 			<dt>Home Phone</dt>
 			<dd>{{ contact.homePhone|default("None") }}</dd>
 			<dt>Mobile Phone</dt>
-			<dd>{{ contact.homePhone|default("None") }}</dd>
+			<dd>{{ contact.mobilePhone|default("None") }}</dd>
 		</dl>
 	</div>
 	<div class="col-xs-6">
