edit delete comment

--- a/src/AppBundle/Resources/views/Contact/show.html.twig
+++ b/src/AppBundle/Resources/views/Contact/show.html.twig
@@ -68,6 +68,9 @@ $(document).ready(function(){
 	$(document).on('fos_comment_submitting_form', function (event, data) {
 		$('.fos_comment_submit input').prop('disabled', true);
 	});
+	$(document).on('fos_comment_edit_comment', function (event, data) {
+		
+	});
 });
 </script>
 {% endblock %}
