--- a/app/Resources/FOSCommentBundle/views/Thread/comment_content.html.twig
+++ b/app/Resources/FOSCommentBundle/views/Thread/comment_content.html.twig
@@ -11,7 +11,7 @@
 
 {% block fos_comment_comment %}
 <div id="fos_comment_{{ comment.id }}" class="media fos_comment_comment_show fos_comment_comment_depth_{{ depth }}" {% if parent is defined and parent is not null %}data-parent="{{ parent.id }}"{% endif %} style="margin-bottom: 15px; border: 1px solid #eee; padding:5px; border-radius: 4px;">
-
+<div  class="fos_comment_comment_body">
     <div class="media-left">
         <img class="media-object" src="{{ gravatar(comment.author.email|default('')) }}" alt="{{ comment.authorName }}">
     </div>
@@ -29,23 +29,25 @@
                 <small>{{ comment.createdAt|date }}</small>
             {% endblock fos_comment_comment_metas_authorline %}
 
-            {% block fos_comment_comment_metas_edit %}
-                {% if fos_comment_can_edit_comment(comment) %}
-                <button data-container="#fos_comment_comment_body_{{ comment.id }}" data-url="{{ url("fos_comment_edit_thread_comment", {"id": comment.thread.id, "commentId": comment.id}) }}" class="fos_comment_comment_edit_show_form btn btn-default btn-xs">{% trans from 'FOSCommentBundle' %}fos_comment_comment_edit{% endtrans %}</button>
-                {% endif %}
-            {% endblock fos_comment_comment_metas_edit %}
 
             {% block fos_comment_comment_metas_delete %}
-                {% if fos_comment_can_delete_comment(comment) %}
+                {% if fos_comment_can_delete_comment(comment) or app.user == comment.author %}
                     {% if comment is fos_comment_in_state(constant('FOS\\CommentBundle\\Model\\CommentInterface::STATE_DELETED')) %}
                         {# undelete #}
-                        <button data-url="{{ url("fos_comment_remove_thread_comment", {"id": comment.thread.id, "commentId": comment.id, "value": constant('FOS\\CommentBundle\\Model\\CommentInterface::STATE_VISIBLE') }) }}" class="fos_comment_comment_remove btn btn-default btn-xs">{% trans from 'FOSCommentBundle' %}fos_comment_comment_undelete{% endtrans %}</button>
+                        <button style="display:none" data-url="{{ url("fos_comment_remove_thread_comment", {"id": comment.thread.id, "commentId": comment.id, "value": constant('FOS\\CommentBundle\\Model\\CommentInterface::STATE_VISIBLE') }) }}" class="fos_comment_comment_remove btn btn-default btn-xs">Undelete</button>
                     {% else %}
                         {# delete #}
-                        <button data-url="{{ url("fos_comment_remove_thread_comment", {"id": comment.thread.id, "commentId": comment.id, "value":  constant('FOS\\CommentBundle\\Model\\CommentInterface::STATE_DELETED')}) }}" class="fos_comment_comment_remove btn btn-default btn-xs">{% trans from 'FOSCommentBundle' %}fos_comment_comment_delete{% endtrans %}</button>
+                        <button data-url="{{ url("fos_comment_remove_thread_comment", {"id": comment.thread.id, "commentId": comment.id, "value":  constant('FOS\\CommentBundle\\Model\\CommentInterface::STATE_DELETED')}) }}" class="fos_comment_comment_remove btn btn-default btn-xs pull-right" style="margin-left:4px;"><i class="fa fa-trash"></i></button>
                     {% endif %}
                 {% endif %}
             {% endblock fos_comment_comment_metas_delete %}
+
+            {% block fos_comment_comment_metas_edit  %}
+                {% if fos_comment_can_edit_comment(comment) or app.user == comment.author %}
+                <button data-container="#fos_comment_comment_body_{{ comment.id }}" data-url="{{ url("fos_comment_edit_thread_comment", {"id": comment.thread.id, "commentId": comment.id}) }}" class="pull-right fos_comment_comment_edit_show_form btn btn-default btn-xs">
+                <i class="fa fa-pencil"></i></button>
+                {% endif %}
+            {% endblock fos_comment_comment_metas_edit %}
 
             {% block fos_comment_comment_metas_voting %}
                 {% if fos_comment_can_vote(comment) %}
@@ -72,7 +74,7 @@
             {% endif %}
         {% endblock fos_comment_comment_body %}
     </div>
-
+</div></div>
     {% block fos_comment_comment_children %}
         {% if view is not same as('flat') %}
             {% if fos_comment_can_comment(comment) %}
@@ -94,6 +96,6 @@
             {% include "FOSCommentBundle:Thread:comments.html.twig" with { "comments": children, "depth": depth + 1, "parent": comment, "view": view } %}
         {% endif %}
     {% endblock fos_comment_comment_children %}
-    </div>
+
 </div>
 {% endblock fos_comment_comment %}
