--- a/app/Resources/FOSCommentBundle/views/Thread/comment_edit.html.twig
+++ b/app/Resources/FOSCommentBundle/views/Thread/comment_edit.html.twig
@@ -20,9 +20,9 @@
         {% endblock %}
 
         <div class="fos_comment_submit">
-            <button type="button" class="fos_comment_comment_edit_cancel">{% trans from 'FOSCommentBundle' %}fos_comment_comment_edit_cancel{% endtrans %}</button>
+            <button type="button" class="fos_comment_comment_edit_cancel btn btn-default btn-xs">{% trans from 'FOSCommentBundle' %}fos_comment_comment_edit_cancel{% endtrans %}</button>
             {% block fos_comment_form_submit %}
-                <input type="submit" value="{% trans from 'FOSCommentBundle' %}fos_comment_comment_edit_submit{% endtrans %}" />
+                <input class="btn btn-default btn-xs" type="submit" value="{% trans from 'FOSCommentBundle' %}fos_comment_comment_edit_submit{% endtrans %}" />
             {% endblock %}
         </div>
 
