--- a/app/Resources/FOSCommentBundle/views/Thread/comments.html.twig
+++ b/app/Resources/FOSCommentBundle/views/Thread/comments.html.twig
@@ -30,5 +30,7 @@
 {% endif %}
 
 {% for commentinfo in comments %}
+{% if commentinfo.comment is not fos_comment_in_state(constant('FOS\\CommentBundle\\Model\\CommentInterface::STATE_DELETED')) %}
     {% include "FOSCommentBundle:Thread:comment.html.twig" with { "children": commentinfo.children, "comment": commentinfo.comment, "depth": depth, "view": view } %}
+{% endif %}
 {% endfor %}
