--- a/src/AppBundle/Resources/views/Document/create.html.twig
+++ b/src/AppBundle/Resources/views/Document/create.html.twig
@@ -40,7 +40,7 @@
 
 {% block javascripts %}
 {{ parent() }}
-<script>
+<script type="text/javascript">
 $("#fileupload").on('submit', function (e) {
     e.preventDefault();
 });
@@ -49,7 +49,8 @@ $(document).ready(function() {
         dataType: 'json',
         autoUpload: false,
         add: function (e, data) {
-          $("#fileupload").on('submit', function () {
+          $("#fileupload").on('submit', function (e) {
+              e.preventDefault();
               data.submit();
           });
         },
