--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -14,6 +14,7 @@
         {% endblock %}
     </head>
     <body class="{% block pageclass %}{% endblock %}">
+
     <div class="bw">
         <div class="fu">
 
@@ -24,9 +25,6 @@
                         <button class="amy amz aoo" type="button" data-toggle="collapse" data-target="#nav-toggleable-sm">
                             <span class="ct">Toggle nav</span>
                         </button>
-                        <a class="aop cn" href="{{ path("dashboard") }}">
-                            <h2 class="apc">Dodir Nade</h2>
-                        </a>
                     </div>
 
                     <div class="collapse and" id="nav-toggleable-sm">
@@ -37,7 +35,7 @@
                             </button>
                         </form>
                         <ul class="nav of nav-stacked">
-                            <li class="tq">Dashboards</li>
+                            <li class="tq">Sections</li>
                             <li >
                                 <a href="{{ path('dashboard') }}">Overview</a>
                             </li>
@@ -51,11 +49,18 @@
                                 <a href="{{ path("document_list") }}">Documents</a>
                             </li>
 
-                            <li class="tq">More</li>
-                            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                                <li><a href="{{ path('fos_user_security_logout') }}">
-                                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
-                                </a></li>
+                            <li class="tq">Settings</li>
+                            {% if app.user.userTenants|length > 1 %}
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                        Switch Account <span class="caret"></span>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                    {% for userTenant in app.user.userTenants %}
+                                        <li{% if userTenant.id == app.session.get('tenant').id %} class="active"{% endif %}><a href="?tenant_id={{ userTenant.id }}">{{ userTenant }}</a></li>
+                                    {% endfor %}
+                                    </ul>
+                                </li>
                             {% endif %}
                         </ul>
                         <hr class="rw aky">
