--- a/web/assets/css/bundled.css
+++ b/web/assets/css/bundled.css
@@ -8960,6 +8960,10 @@ textarea.mention {
   color: #1997c6;
   font-weight: normal;
 }
+
+.search-form {
+  margin-bottom: 15px !important;
+}
 /* Color Added for Clarity */
 .fa-file-text-o:before, 
 .fa-file-txt-o:before {
