--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -2,43 +2,59 @@
 
 {% block pageclass %}signin{% endblock %}
 {% block body %}
-
-<div class="row">
-<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-6">
-
-  <form method="post" action="{{ path("fos_user_security_check") }}" class="form form-signin">
     {% if error %}
       <div class="alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-    <h2 class="form-signin-heading">Please sign in</h2>
-    <div class="form-group">
-    <label for="inputEmail" class="sr-only">Email address or Username</label>
-    <input type="text"
-            name="_username"
-            id="inputEmail"
-            class="form-control"
-            value="{{ last_username }}"
-            placeholder="Email address or username"
-            required=""
-            autofocus="">
-    </div>
-    <div class="form-group">
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password"
-          id="inputPassword"
-          class="form-control"
-          placeholder="Password"
-          name="_password"
-          required="">
-    </div>
-    <div class="checkbox">
-      <label>
-        <input type="checkbox" id="remember_me" name="_remember_me" value="on"> Remember me
-      </label>
-    </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  </form>
-</div>
-</div>
+<section id="login">
+    <div class="container">
+      <div class="row">
+          <div class="col-xs-12">
+              <div class="form-wrap">
+                      <form id="login-form" method="post" action="{{ path("fos_user_security_check") }}" class="form form-signin">
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                        <div class="form-group">
+                            <label for="email" class="sr-only">Email</label>
+                            <input type="text"
+                                    name="_username"
+                                    id="inputEmail"
+                                    class="form-control"
+                                    value="{{ last_username }}"
+                                    placeholder="Email address or username"
+                                    required=""
+                                    autofocus="">
+                        </div>
+                        <div class="form-group">
+                            <label for="key" class="sr-only">Password</label>
+                            <input type="password"
+                            id="inputPassword"
+                            class="form-control"
+                            placeholder="Password"
+                            name="_password"
+                            required="">
+                        </div>
+                        <div class="checkbox">
+                            <span class="character-checkbox" onclick="remember_me()"></span>
+                            <span class="label" onclick="remember_me()">Remember me</span>
+                            <input type="hidden" id="remember_me" name="_remember_me" value="">
+                        </div>
+                        <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block" value="Log in">
+                    </form>
+              </div>
+        </div> <!-- /.col-xs-12 -->
+      </div> <!-- /.row -->
+    </div> <!-- /.container -->
+</section>
+
+<script type="text/javascript">
+function remember_me() {
+    var val = $('#remember_me').val();
+    if(val != 'on') {
+        $('.checkbox').addClass('show');
+        $('#remember_me').val('on');
+    } else {
+        $('.checkbox').removeClass('show');
+        $('#remember_me').val('off');
+    }
+}
+</script>
 {% endblock %}
